--- a/yamls/mahara.yml
+++ b/yamls/mahara.yml
@@ -71,6 +71,10 @@
 # CVE-2020-9282 TODO
 # CVE-2020-9386 TODO
 # CVE-2020-9387 TODO
+# CVE-2020-23052 TODO
+# CVE-2021-43264 TODO
+# CVE-2021-43265 TODO
+# CVE-2021-43266 TODO
 Mahara:
   1:
     location: ['/htdocs/lib/version.php']
