--- a/yamls/mahara.yml
+++ b/yamls/mahara.yml
@@ -72,6 +72,8 @@
 # CVE-2020-9386 TODO
 # CVE-2020-9387 TODO
 # CVE-2020-23052 TODO
+# CVE-2021-40848 TODO
+# CVE-2021-40849 TODO
 # CVE-2021-43264 TODO
 # CVE-2021-43265 TODO
 # CVE-2021-43266 TODO
