--- a/yamls/tikiwiki.yml
+++ b/yamls/tikiwiki.yml
@@ -48,7 +48,9 @@
 # CVE-2020-8966 TODO
 # CVE-2020-15906 TODO
 # CVE-2020-16131 21.1/20.3/18.6/15.9 https://info.tiki.org/article472-New-Security-Releases-Tiki-21-1-LTS-20-3-18-6-and-15-9-LTS-Versions-Just-Released
-# CVE-2020-29254
+# CVE-2020-29254 TODO
+# CVE-2021-36550 TODO
+# CVE-2021-36551 TODO
 TikiWiki:
   1:
     location: ['/lib/setup/twversion.class.php']
