--- a/yamls/concrete5.yml
+++ b/yamls/concrete5.yml
@@ -20,10 +20,24 @@
 # CVE-2021-22949 TODO
 # CVE-2021-22950 TODO
 # CVE-2021-22953 TODO
+# CVE-2021-22958 TODO
 # CVE-2021-36766 TODO http://karmainsecurity.com/KIS-2021-05 https://packetstormsecurity.com/files/163564/Concrete5-8.5.5-Phar-Deserialization.html https://hackerone.com/reports/1063039 asked from concrete5 2021-07-27
+# CVE-2021-40097 TODO
+# CVE-2021-40098 TODO
 # CVE-2021-40099 TODO
 # CVE-2021-40100 TODO
 # CVE-2021-40102 TODO
+# CVE-2021-40103 TODO
+# CVE-2021-40104 TODO
+# CVE-2021-40105 TODO
+# CVE-2021-40106 TODO
+# CVE-2021-40108 TODO
+# CVE-2021-40109 TODO
+# CVE-2021-41461 TODO
+# CVE-2021-41462 TODO
+# CVE-2021-41463 TODO
+# CVE-2021-41464 TODO
+# CVE-2021-41465 TODO
 concrete5:
   1:
     location: ['/concrete/config/version.php']
