--- a/yamls/impresscms.yml
+++ b/yamls/impresscms.yml
@@ -5,6 +5,7 @@
 # CVE-2014-4036 1.3.7
 # CVE-2018-13983 TODO https://www.netsparker.com/web-applications-advisories/ns-18-033-cross-site-scripting-in-impresscms/
 # CVE-2020-17551 TODO
+# CVE-2021-28088 TODO
 ImpressCMS:
   1:
     location: ['/htdocs/include/version.php']
