--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1054,12 +1054,13 @@ WordPress plugin simple-membership:
     cve: 'OVE-20160712-0016 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_simple_membership_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# N/A 2.3.1 OVE-20160712-0017 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_top_10___popular_posts_plugin_for_wordpress.html
 WordPress plugin wordpress-popular-posts:
   1:
     location: ['/wp-content/plugins/wordpress-popular-posts/readme.txt']
-    secure_version: '2.3.1'
+    secure_version: '5.3.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160712-0017 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_top_10___popular_posts_plugin_for_wordpress.html'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-42362 https://blog.nintechnet.com/improper-input-validation-fixed-in-wordpress-popular-posts-plugin/ https://www.wordfence.com/vulnerability-advisories/#CVE-2021-42362'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # OVE-20160712-0020 3.5.16 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_wp_no_external_links_wordpress_plugin.html
