--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1092,13 +1092,14 @@ WordPress plugin wp-live-chat-support:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-14950 https://arstechnica.com/information-technology/2019/05/hackers-actively-exploit-wordpress-plugin-flaw-to-send-visitors-to-bad-sites/ https://www.zscaler.com/blogs/research/malicious-javascript-injected-wordpress-sites-using-latest-plugin-vulnerability'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-# OVE-20160721-0003 1.1.48 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_contact_form_to_email_wordpress_plugin.html
+# N/A 1.1.48 OVE-20160721-0003 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_contact_form_to_email_wordpress_plugin.html
+# CVE-2019-9646 1.2.66 https://lists.openwall.net/full-disclosure/2019/02/05/7 https://security-consulting.icu/blog/2019/02/wordpress-contact-form-email-xss-csrf/
 WordPress plugin contact-form-to-email:
   1:
     location: ['/wp-content/plugins/contact-form-to-email/readme.txt']
-    secure_version: '1.2.66'
+    secure_version: '1.3.25'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9646 https://lists.openwall.net/full-disclosure/2019/02/05/7 https://security-consulting.icu/blog/2019/02/wordpress-contact-form-email-xss-csrf/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-42361 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-42361'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # OVE-20160722-0006 2.7.0 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_code_snippets_wordpress_plugin.html
