--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1314,7 +1314,7 @@ WordPress plugin store-locator-le:
     location: ['/wp-content/plugins/store-locator-le/readme.txt']
     secure_version: '5.5.15'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2021/04/severe-unpatched-vulnerabilities-leads-to-closure-of-store-locator-plus-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24289 https://nvd.nist.gov/vuln/detail/CVE-2021-24290 https://www.wordfence.com/blog/2021/04/severe-unpatched-vulnerabilities-leads-to-closure-of-store-locator-plus-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin add-from-server:
