--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2991,12 +2991,17 @@ WordPress plugin users-customers-import-export-for-wp-woocommerce:
     post_processing: ['php5.fcgi']
 # CVE-2020-8435 4.6.0.3 https://spider-security.co.uk/blog-cve-2020-8435
 # CVE-2020-8436 4.6.0.3 https://spider-security.co.uk/blog-cve-2020-8436
+# CVE-2020-9454 4.6.0.4 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/
+# CVE-2020-9455 4.6.0.4 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/
+# CVE-2020-9456 4.6.0.4 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/
+# CVE-2020-9457 4.6.0.4 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/
+# CVE-2020-9458 4.6.0.4 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/
 WordPress plugin custom-registration-form-builder-with-submission-manager:
   1:
     location: ['/wp-content/plugins/custom-registration-form-builder-with-submission-manager/readme.txt']
     secure_version: '4.6.0.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-9454 https://nvd.nist.gov/vuln/detail/CVE-2020-9455 https://nvd.nist.gov/vuln/detail/CVE-2020-9456 https://nvd.nist.gov/vuln/detail/CVE-2020-9457 https://nvd.nist.gov/vuln/detail/CVE-2020-9458 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-4073 https://www.wordfence.com/blog/2021/12/authentication-bypass-vulnerability-patched-in-user-registration-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin responsive-add-ons:
