--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -276,18 +276,23 @@
 # CVE-2020-36326 5.7.2 https://wordpress.org/news/2021/05/wordpress-5-7-2-security-release/
 # CVE-2021-39201 5.8 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-wh69-25hr-h94v
 # CVE-2021-39200 5.8.1 https://wordpress.org/news/2021/09/wordpress-5-8-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-m9hc-7v5q-x8q5
+# TODO 5.8.2 https://wordpress.org/news/2021/11/wordpress-5-8-2-security-and-maintenance-release/
+# CVE-2022-21661 5.8.3 https://wordpress.org/news/2022/01/wordpress-5-8-3-security-release/ https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-6676-cqfm-gw84 https://github.com/WordPress/wordpress-develop/commit/17efac8c8ec64555eff5cf51a3eff81e06317214 https://hackerone.com/reports/1378209
+# CVE-2022-21662 5.8.3 https://wordpress.org/news/2022/01/wordpress-5-8-3-security-release/ https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-699q-3hj9-889w https://hackerone.com/reports/425342
+# CVE-2022-21663 5.8.3 https://wordpress.org/news/2022/01/wordpress-5-8-3-security-release/ https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-jmmq-m8p8-332h https://hackerone.com/reports/541469
+# CVE-2022-21664 5.8.3 https://wordpress.org/news/2022/01/wordpress-5-8-3-security-release/ https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-jp3p-gw8h-6x86 https://github.com/WordPress/wordpress-develop/commit/c09ccfbc547d75b392dbccc1ef0b4442ccd3c957
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '5.8.2'
+    secure_version: '5.8.3'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2021/11/wordpress-5-8-2-security-and-maintenance-release/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-21661 https://nvd.nist.gov/vuln/detail/CVE-2022-21662 https://nvd.nist.gov/vuln/detail/CVE-2022-21663 https://nvd.nist.gov/vuln/detail/CVE-2022-21664 https://wordpress.org/news/2022/01/wordpress-5-8-3-security-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '5.8.2'
+    secure_version: '5.8.3'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2021/11/wordpress-5-8-2-security-and-maintenance-release/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-21661 https://nvd.nist.gov/vuln/detail/CVE-2022-21662 https://nvd.nist.gov/vuln/detail/CVE-2022-21663 https://nvd.nist.gov/vuln/detail/CVE-2022-21664 https://wordpress.org/news/2022/01/wordpress-5-8-3-security-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
