--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -267,12 +267,14 @@ WordPress plugin subscribe-to-comments:
     cve: 'https://security.dxw.com/advisories/admin-only-local-file-inclusion-and-arbitrary-code-execution-in-subscribe-to-comments-2-1-2/ http://seclists.org/fulldisclosure/2015/Jul/71'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2015-9233 1.1.6 http://seclists.org/fulldisclosure/2015/Jul/49 https://www.openwall.com/lists/oss-security/2015/07/11/2
+# CVE-2015-9234 1.1.6 http://seclists.org/fulldisclosure/2015/Jul/49 https://www.openwall.com/lists/oss-security/2015/07/11/2
 WordPress plugin cp-contact-form-with-paypal:
   1:
     location: ['/wp-content/plugins/cp-contact-form-with-paypal/README.txt']
-    secure_version: '1.1.6'
+    secure_version: '1.3.02'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9233 https://nvd.nist.gov/vuln/detail/CVE-2015-9234 http://seclists.org/fulldisclosure/2015/Jul/49 https://www.openwall.com/lists/oss-security/2015/07/11/2'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-14784 https://nvd.nist.gov/vuln/detail/CVE-2019-14785'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2015-1204 3.9.2
