--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1826,12 +1826,13 @@ WordPress plugin tidio-gallery:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000153 http://www.vapidlabs.com/wp/wp_advisory.php?v=427'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2016-1000154 1.0.8 https://nvd.nist.gov/vuln/detail/CVE-2016-1000154 http://www.vapidlabs.com/wp/wp_advisory.php?v=112
 WordPress plugin whizz:
   1:
     location: ['/wp-content/plugins/whizz/readme.txt']
-    secure_version: '1.0.8'
+    secure_version: '1.1.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000154 http://www.vapidlabs.com/wp/wp_advisory.php?v=112'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-8099 https://lists.openwall.net/full-disclosure/2017/04/07/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wpsolr-search-engine:
