--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2256,12 +2256,13 @@ WordPress plugin wordpress-firewall-2:
 # TODO          12.0.9 "Fixed: XSS issue with agent and ip in visitors page, Thanks Ryan Dewhurst from Dewhurst Security Team."
 # CVE-2017-10991 TODO https://lorexxar.cn/2017/07/07/WordPress%20WP%20Statistics%20authenticated%20xss%20Vulnerability%28WP%20Statistics%20-=12.0.9%29/
 # TODO 12.0.9 https://wordpress.org/plugins/wp-statistics/#developers https://blog.dewhurstsecurity.com/2017/07/03/wp-statistics-authenticated-xss-vulnerability.html
+# CVE-2021-24340 13.0.8 https://www.wordfence.com/blog/2021/05/over-600000-sites-impacted-by-wp-statistics-patch/
 WordPress plugin wp-statistics:
   1:
     location: ['/wp-content/plugins/wp-statistics/readme.txt']
-    secure_version: '13.0.8'
+    secure_version: '13.1.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24340 https://www.wordfence.com/blog/2021/05/over-600000-sites-impacted-by-wp-statistics-patch/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-0513 https://www.wordfence.com/blog/2022/02/unauthenticated-sql-injection-vulnerability-patched-in-wordpress-statistics-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2017-7723 1.2.5
