--- a/yamls/microweber.yml
+++ b/yamls/microweber.yml
@@ -14,6 +14,20 @@
 # CVE-2020-23138 TODO
 # CVE-2020-23139 TODO
 # CVE-2020-23140 TODO
+# CVE-2022-0504 TODO
+# CVE-2022-0505 TODO
+# CVE-2022-0506 TODO
+# CVE-2022-0557 TODO
+# CVE-2022-0560 TODO
+# CVE-2022-0596 TODO
+# CVE-2022-0597 TODO
+# CVE-2022-0638 TODO
+# CVE-2022-0660 TODO
+# CVE-2022-0666 TODO
+# CVE-2022-0678 TODO
+# CVE-2022-0724 TODO
+# CVE-2022-0721 TODO
+# CVE-2022-0719 TODO
 Microweber:
   1:
     location: ['/src/Microweber/bootstrap.php']
