--- a/yamls/zenphoto.yml
+++ b/yamls/zenphoto.yml
@@ -16,11 +16,11 @@
 # CVE-2013-7242 1.4.5.4 https://www.zenphoto.org/news/zenphoto-1.4.5.4
 # CVE-2014-XXXX 1.4.5.9 https://www.zenphoto.org/news/zenphoto-1.4.5.9
 # CVE-2015-2948 1.4.8   https://www.zenphoto.org/news/zenphoto-1.4.8
-# CVE-2015-5591 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9
-# CVE-2015-5592 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9
-# CVE-2015-5593 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9
-# CVE-2015-5594 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9
-# CVE-2015-5595 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9
+# CVE-2015-5591 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9 https://lists.openwall.net/bugtraq/2015/07/10/15 https://www.openwall.com/lists/oss-security/2015/07/16/5
+# CVE-2015-5592 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9 https://lists.openwall.net/bugtraq/2015/07/10/15 https://www.openwall.com/lists/oss-security/2015/07/16/5
+# CVE-2015-5593 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9 https://lists.openwall.net/bugtraq/2015/07/10/15 https://www.openwall.com/lists/oss-security/2015/07/16/5
+# CVE-2015-5594 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9 https://lists.openwall.net/bugtraq/2015/07/10/15 https://www.openwall.com/lists/oss-security/2015/07/16/5
+# CVE-2015-5595 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9 https://lists.openwall.net/bugtraq/2015/07/10/15 https://www.openwall.com/lists/oss-security/2015/07/16/5
 # CVE-2016-XXXX 1.4.12  https://www.zenphoto.org/news/zenphoto-1.4.12 https://blog.curesec.com/article/blog/Zenphoto-1411-RFI-156.html
 # CVE-2018-20140 1.5.1  https://www.netsparker.com/web-applications-advisories/ns-18-043-cross-site-scripting-in-zenphoto/
 # CVE-2020-5592 1.5.7   https://www.zenphoto.org/news/zenphoto-1.5.7/
