--- a/yamls/microweber.yml
+++ b/yamls/microweber.yml
@@ -28,6 +28,23 @@
 # CVE-2022-0724 TODO
 # CVE-2022-0721 TODO
 # CVE-2022-0719 TODO
+# CVE-2022-0723 TODO
+# CVE-2022-0763 TODO
+# CVE-2022-0855 TODO
+# CVE-2022-0895 TODO
+# CVE-2022-0906 TODO
+# CVE-2022-0928 TODO
+# CVE-2022-0921 TODO
+# CVE-2022-0912 TODO
+# CVE-2022-0913 TODO
+# CVE-2022-0926 TODO
+# CVE-2022-0929 TODO
+# CVE-2022-0930 TODO
+# CVE-2022-0968 TODO
+# CVE-2022-0963 TODO
+# CVE-2022-0961 TODO
+# CVE-2022-0954 TODO
+# CVE-2022-1036 TODO
 Microweber:
   1:
     location: ['/src/Microweber/bootstrap.php']
