--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -125,6 +125,7 @@
 # CVE-2018-0504 1.31.1/1.30.1/1.29.3/1.27.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html
 # CVE-2018-0505 1.31.1/1.30.1/1.29.3/1.27.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html
 # CVE-2018-13258 1.31.1
+# CVE-2020-15005 1.31.8/1.33.4/1.34.2
 # CVE-2019-11358 1.32.2/1.31.2/1.30.2/1.27.6 https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
 # CVE-2019-12465 1.32.2/1.31.2/1.30.2/1.27.6 https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
 # CVE-2019-12466 1.32.2/1.31.2/1.30.2/1.27.6 https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
