--- a/yamls/atutor.yml
+++ b/yamls/atutor.yml
@@ -24,6 +24,7 @@
 # CVE-2019-12170 TODO affected 2.2.4 duplicate of CVE-2019-11446 https://github.com/atutor/ATutor/issues/167
 # CVE-2019-16114 TODO
 # CVE-2020-23341 TODO
+# CVE-2021-43498 TODO
 ##
 ## TODO: ATutor is no longer maintained
 ##
