--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -216,7 +216,7 @@ WordPress plugin w3-total-cache:
     location: ['/wp-content/plugins/w3-total-cache/readme.txt']
     secure_version: '0.9.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160719-0004 https://sumofpwn.nl/advisory/2016/reflected_cross_site_scripting_vulnerability_in_w3_total_cache_plugin.html OVE-20160724-0002 https://sumofpwn.nl/advisory/2016/information_disclosure_race_condition_in_w3_total_cache_wordpress_plugin.html'
+    cve: 'OVE-20160719-0004 https://sumofpwn.nl/advisory/2016/reflected_cross_site_scripting_vulnerability_in_w3_total_cache_plugin.html OVE-20160724-0002 https://sumofpwn.nl/advisory/2016/information_disclosure_race_condition_in_w3_total_cache_wordpress_plugin.html https://blog.zerial.org/seguridad/vulnerabilidad-cross-site-scripting-en-wordpress-w3-total-cache/ https://lists.openwall.net/full-disclosure/2016/09/21/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin json-rest-api:
@@ -3325,12 +3325,13 @@ WordPress plugin tutor:
     cve: 'https://www.wordfence.com/blog/2021/03/several-vulnerabilities-patched-in-tutor-lms-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# TODO https://www.wordfence.com/blog/2021/03/cross-site-scripting-vulnerabilities-in-elementor-impact-over-7-million-sites/ CVE. Wordfence page says "Pending", but not sure if that has been requested.
 WordPress plugin elementor:
   1:
     location: ['/wp-content/plugins/elementor/readme.txt']
-    secure_version: '3.1.4'
+    secure_version: '3.6.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2021/03/cross-site-scripting-vulnerabilities-in-elementor-impact-over-7-million-sites/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    cve: 'https://www.wordfence.com/blog/2022/04/elementor-critical-remote-code-execution-vulnerability/ https://nvd.nist.gov/vuln/detail/CVE-2022-1329'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin official-facebook-pixel:
