--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -124,6 +124,11 @@
 # https://drupal.org/SA-CORE-2022-001   CVE-2021-41183  9.3.3/9.2.11/7.86
 # https://drupal.org/SA-CORE-2022-002   CVE-2010-5312/CVE-2016-7103/CVE-2021-41182/CVE-2021-41183   7.86
 # https://drupal.org/SA-CORE-2022-003   CVE-2022-25271  9.3.6/9.2.13/7.88
+# https://drupal.org/SA-CORE-2022-004 TODO
+# https://drupal.org/SA-CORE-2022-005 TODO
+# https://drupal.org/SA-CORE-2022-006 TODO
+# https://drupal.org/SA-CORE-2022-007 TODO
+# https://drupal.org/SA-CORE-2022-008 TODO
 Drupal 9.3:
   1:
     location: ['/core/lib/Drupal.php']
