--- a/yamls/impresscms.yml
+++ b/yamls/impresscms.yml
@@ -11,7 +11,7 @@
 # CVE-2021-26599 TODO
 # CVE-2021-26600 TODO
 # CVE-2021-26601 TODO
-# CVE-2022-26986 TODO
+# CVE-2022-26986 TODO https://github.com/sartlabs/0days/blob/main/ImpressCMS1.4.3/Exploit.txt v1.4.3 affected
 # https://r0.haxors.org/posts?id=8
 # CVE-2021-26600 1.4.3 http://karmainsecurity.com/KIS-2022-01 https://lists.openwall.net/full-disclosure/2022/03/22/1
 # CVE-2021-26601 1.4.3 http://karmainsecurity.com/KIS-2022-02 https://lists.openwall.net/full-disclosure/2022/03/22/2
